--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,7 +7,8 @@
     android:background="@drawable/img_splash_background"
     tools:context=".SplashActivity">
 
-    <TextView
+    <com.example.myshoppalpractice.utils.MSPTextViewBold
+        android:id="@+id/tv_app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
