--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -4,13 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
     app:startDestination="@+id/navigation_home">
-
-    <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.example.myshoppalpractice.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
-
     <fragment
         android:id="@+id/navigation_dashboard"
         android:name="com.example.myshoppalpractice.ui.dashboard.DashboardFragment"
@@ -18,8 +11,16 @@
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
+        android:id="@+id/navigation_home"
+        android:name="com.example.myshoppalpractice.ui.home.ProductsFragment"
+        android:label="@string/title_home"
+        tools:layout="@layout/fragment_products" />
+
+
+
+    <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.example.myshoppalpractice.ui.notifications.NotificationsFragment"
+        android:name="com.example.myshoppalpractice.ui.notifications.OrdersFragment"
         android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/fragment_orders" />
 </navigation>
